# FatFingers

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  MVP_PLAN.md  OPEN_SOURCE_CHECKLIST.md  PRODUCT_SPEC.md  QA_CHECKLIST.md  ROADMAP.md  SECURITY_PRIVACY.md
frontend/FatFingers/: README.md  lakebed.json
frontend/FatFingers/client/: index.tsx
frontend/FatFingers/server/: index.ts
frontend/FatFingers/shared/: release.ts
scripts/: run-tauri.mjs  set-version.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: clipboard.rs  hotkeys.rs  lifecycle.rs  mod.rs  paste.rs  tray.rs  windows.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/llm/: custom_http.rs  minimax.rs  mod.rs  openai.rs  openai_compatible.rs  openrouter.rs  prompts.rs  types.rs
src-tauri/src/settings/: history.rs  mod.rs  secrets.rs  store.rs
src/components/: ActionSelector.test.tsx  ActionSelector.tsx  ErrorBanner.tsx  LoadingState.tsx  ProviderForm.test.tsx  ProviderForm.tsx  ResultPanel.tsx  SettingsButton.tsx  ShortcutRecorder.test.tsx  ShortcutRecorder.tsx  TrayHint.tsx
src/lib/: hotkeys.test.ts  hotkeys.ts  i18n.ts  settings.ts  tauri.ts  validators.test.ts  validators.ts
src/screens/: About.tsx  Helper.test.tsx  Helper.tsx  Onboarding.test.tsx  Onboarding.tsx  Settings.test.tsx  Settings.tsx
src/styles/: globals.css  helper.css  settings.css
src/test/: setup.ts
src/types/: app.ts  llm.ts
